# RVRanger

./: .replit  .replit.workflows  api.py  debug_log.txt  dev_assistant.py  enhanced_scraper.py  fix_image_imports.py  fix_remaining_images.py  fix_rv_images.py  fix_search_function.ts  image_verification_results.txt  import_enhanced_listings.py  import_final.py  import_improved_data.py  import_improved_listings.py  import_listings.py  import_table_listings.py  import_to_database.py  improved_prevost_listings.json  improved_rv_scraper.py  improved_scraper.py  listings.json  package-lock.json  package.json  prevost_listings.json  prevost_scraper.py  prevost_table_listings.json  pyproject.toml  redistribute_images.py  replit.md  replit.nix  reset_listings.py  response.json  run_migration.js  scrape_log.txt  scrape_prevost.py  start_all.sh  start_assistant.py  table_scraper.py  tailwind.config.ts  (+5 more)
attached_assets/: Pasted--1-Create-a-chat-assistant-Directory-In-the-root-of-your-RVRanger-project-create-a-new-folder-na-1744920680874.txt  Pasted--End-to-End-Search-Function-for-RVRanger-Context-Repo-github-com-tychase-RVRanger-Stack-F-1745151070195.txt  Pasted--Fix-the-Message-Disappears-Issue-Here-s-a-working-version-of-your-index-html-that-ensures-Hitt-1744922672258.txt  Pasted--Fully-patched-SearchForm-tsx-with-stable-all-defaults-and-proper-placeholder-rendering-import-R-1744747181165.txt  Pasted--Patched-SearchForm-tsx-with-visible-dropdown-placeholders-and-labeled-checkboxes-import-React-fro-1744745097101.txt  (+20 more)
chat_assistant/: main.py
client/: index.html
server/: index.ts  (+4 more)
(+63 files in other folders)
